# django-group-model

./: LICENSE  Pipfile  README.md  pyproject.toml
django_group_model/: apps.py  models.py
